tests/errors.stderr
error: Missing a value to map to. Simplest form should be #[mapstr(name="name", "value")]
  --> tests/errors.rs:35:10
   |
35 | #[derive(EnumMaping)]
   |          ^^^^^^^^^^
   |
   = note: this error originates in the derive macro `EnumMaping` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Parameter `name` must be specified. Simplest form should be #[mapstr(name="name", "value")]
  --> tests/errors.rs:43:14
   |
43 |     #[mapstr("fa")]
   |              ^^^^

error: Missing a value to map to. Simplest form should be #[mapstr(name="name", "value")]
  --> tests/errors.rs:49:14
   |
49 |     #[mapstr(name="fas")]
   |              ^^^^^^^^^^

error: `value` is set twice. Remove one.
  --> tests/errors.rs:55:30
   |
55 |     #[mapstr(name="n", "fa", "faas")]
   |                              ^^^^^^

error: Found unknown `mapstr` parameter
  --> tests/errors.rs:62:30
   |
62 |     #[mapstr(name="n", "fa", fas)]
   |                              ^^^

error: Found unknown `mapstr` parameter.
  --> tests/errors.rs:68:30
   |
68 |     #[mapstr(name="n", "fa", nasdf="faas")]
   |                              ^^^^^^^^^^^^

error: Found unknown `mapstr` parameter.
  --> tests/errors.rs:74:30
   |
74 |     #[mapstr(name="n", "fa", name=true)]
   |                              ^^^^^^^^^

error: Found unknown attribute on variant.
  --> tests/errors.rs:80:7
   |
80 |     #[mapstr2(name="n", "fa", name=true)]
   |       ^^^^^^^

error: Derive macro `EnumMaping` expected an enum.
  --> tests/errors.rs:87:1
   |
87 | / struct Sa {
88 | |
89 | | }
   | |_^

error: cannot find attribute `mapstr2` in this scope
  --> tests/errors.rs:80:7
   |
80 |     #[mapstr2(name="n", "fa", name=true)]
   |       ^^^^^^^ help: a derive helper attribute with a similar name exists: `mapstr`

error[E0599]: no method named `try_to_caps` found for enum `Example` in the current scope
  --> tests/errors.rs:31:17
   |
5  | enum Example {
   | ------------ method `try_to_caps` not found for this
...
31 |     Example::V1.try_to_caps();
   |                 ^^^^^^^^^^^ help: there is an associated function with a similar name: `try_to_caps2`

error[E0599]: no method named `try_from_caps2` found for enum `Example` in the current scope
  --> tests/errors.rs:32:17
   |
5  | enum Example {
   | ------------ method `try_from_caps2` not found for this
...
32 |     Example::V2.try_from_caps2();
   |                 ^^^^^^^^^^^^^^ help: there is an associated function with a similar name: `try_to_caps2`
